--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "intl-tel-input": "^17.0.13",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "use-immer": "^0.6.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
