--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "intl-tel-input": "^17.0.13",
     "next": "11.1.2",
     "react": "17.0.2",
