--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^0.23.0",
+    "he": "^1.2.0",
+    "html-react-parser": "^1.4.0",
     "intl-tel-input": "^17.0.13",
     "next": "11.1.2",
     "react": "17.0.2",
