--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aria-modal-dialog": "^3.3.3",
     "axios": "^0.23.0",
     "he": "^1.2.0",
     "html-react-parser": "^1.4.0",
