--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "he": "^1.2.0",
     "html-react-parser": "^1.4.0",
     "intl-tel-input": "^17.0.13",
+    "jsonwebtoken": "^8.5.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
