--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "export NODE_OPTIONS=--openssl-legacy-provider; next dev",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; next build",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider; next start",
+    "lint": "export NODE_OPTIONS=--openssl-legacy-provider; next lint"
   },
   "dependencies": {
     "aria-modal-dialog": "^3.3.3",
@@ -15,7 +15,7 @@
     "html-react-parser": "^1.4.0",
     "intl-tel-input": "^17.0.13",
     "jsonwebtoken": "^8.5.1",
-    "next": "11.1.2",
+    "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "use-immer": "^0.6.0"
