--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "export NODE_OPTIONS=--openssl-legacy-provider; next dev",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider; next build",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; NODE_ENV=production next build",
     "start": "export NODE_OPTIONS=--openssl-legacy-provider; next start -p 4653",
     "lint": "export NODE_OPTIONS=--openssl-legacy-provider; next lint"
   },
