--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "debug": "NODE_DEBUG=https next dev",
     "build": "NODE_ENV=production next build",
     "start": "next start -p 4653",
     "lint": "next lint"
